src/test/ui/asm/inline-syntax.arm.stderr
error: unknown directive
.intel_syntax noprefix
^
error: unknown directive
.intel_syntax noprefix
^
error: unknown directive
   |
note: instantiated into assembly here
  --> <inline asm>:1:1
   |
LL | .intel_syntax noprefix
   | ^

error: unknown directive
  --> $DIR/inline-syntax.rs:31:15
   |
LL |         asm!(".intel_syntax noprefix", "nop");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     .intel_syntax noprefix
   |     ^

error: unknown directive
  --> $DIR/inline-syntax.rs:34:15
   |
LL |         asm!(".intel_syntax aaa noprefix", "nop");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     .intel_syntax aaa noprefix
   |     ^

error: unknown directive
  --> $DIR/inline-syntax.rs:37:15
   |
LL |         asm!(".att_syntax noprefix", "nop");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     .att_syntax noprefix
   |     ^

error: unknown directive
  --> $DIR/inline-syntax.rs:40:15
   |
LL |         asm!(".att_syntax bbb noprefix", "nop");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     .att_syntax bbb noprefix
   |     ^

error: unknown directive
  --> $DIR/inline-syntax.rs:43:15
   |
LL |         asm!(".intel_syntax noprefix; nop");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     .intel_syntax noprefix; nop
   |     ^

error: unknown directive
  --> $DIR/inline-syntax.rs:49:13
   |
LL |             .intel_syntax noprefix
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             .intel_syntax noprefix
   |             ^

error: aborting due to 7 previous errors

